public class Const {
    public static final int FIRST_HOUR_FINE = 25;
    public static final int ADDITIONAL_HOUR_FINE = 10;
}
